RESOLVED FIXED109364
[WK2] Fix build on PLUGIN_ARCHITECTURE(UNSUPPORTED) after r142314
https://bugs.webkit.org/show_bug.cgi?id=109364
Summary [WK2] Fix build on PLUGIN_ARCHITECTURE(UNSUPPORTED) after r142314
Zoltan Arvai
Reported 2013-02-09 14:31:05 PST
After r142314 QtWin build is broken. void NetscapePlugin::platformPreInitialize() is need to be added to WebKit2/WebProcess/Plugins/Netscape/NetscapePluginNone.cpp Patch is on the way.
Attachments
patch for landing (1.23 KB, patch)
2013-02-09 14:35 PST, Zoltan Arvai
no flags
Zoltan Arvai
Comment 1 2013-02-09 14:35:12 PST
Created attachment 187446 [details] patch for landing
WebKit Review Bot
Comment 2 2013-02-10 00:38:25 PST
Comment on attachment 187446 [details] patch for landing Clearing flags on attachment: 187446 Committed r142390: <http://trac.webkit.org/changeset/142390>
WebKit Review Bot
Comment 3 2013-02-10 00:38:28 PST
All reviewed patches have been landed. Closing bug.
Anders Carlsson
Comment 4 2013-02-11 10:51:02 PST
What is PLUGIN_ARCHITECTURE(UNSUPPORTED)? We already have an #ifdef for turning on/off plug-in support.
Zoltan Arvai
Comment 5 2013-02-12 01:42:55 PST
Maybe plugin api is enabled for Qt but not supported on Windows? #if ENABLE(NETSCAPE_PLUGIN_API) && PLUGIN_ARCHITECTURE(UNSUPPORTED) This bug seems to be related: https://bugs.webkit.org/show_bug.cgi?id=86577 (In reply to comment #4) > What is PLUGIN_ARCHITECTURE(UNSUPPORTED)? We already have an #ifdef for turning on/off plug-in support.
Anders Carlsson
Comment 6 2013-02-12 10:24:03 PST
(In reply to comment #5) > Maybe plugin api is enabled for Qt but not supported on Windows? > #if ENABLE(NETSCAPE_PLUGIN_API) && PLUGIN_ARCHITECTURE(UNSUPPORTED) > Why is it enabled on Windows then?
Note You need to log in before you can comment on or make changes to this bug.