[WK2] Fix build on PLUGIN_ARCHITECTURE(UNSUPPORTED) after r142314 https://bugs.webkit.org/show_bug.cgi?id=109364

Patch by Zoltan Arvai <zarvai@inf.u-szeged.hu> on 2013-02-10
Reviewed by Simon Hausmann.

void NetscapePlugin::platformPreInitialize() is need to be added to NetscapePluginNone.cpp.

* WebProcess/Plugins/Netscape/NetscapePluginNone.cpp:
(WebKit::NetscapePlugin::platformPreInitialize):
(WebKit):

git-svn-id: svn://svn.chromium.org/blink/trunk@142390 bbb929c8-8fbe-4397-9dbb-9b2b20218538