third_party/WebKit/Source/WebKit2/WebProcess/Plugins/Netscape/NetscapePluginNone.cpp
@@ -34,6 +34,10 @@ using namespace WebCore;
 
 namespace WebKit {
 
+void NetscapePlugin::platformPreInitialize()
+{
+}
+
 bool NetscapePlugin::platformPostInitialize()
 {
     return false;
